@@ -9,7 +9,7 @@
         "lossless": true,
         "size": 3145728,
         "name": "some_file.mp3",
-        "search": "some file",
+        "search": {"file": "some file"},
         "directory": {"$oid": "ddff19b92e21e1560a7dd000"},
         "parent_directories": [{"$oid": "ddff19b92e21e1560a7dd000"}],
         "path": "/var/media/some_file.mp3",
@@ -28,7 +28,7 @@
         "lossless": true,
         "size": 3145728,
         "name": "ano thing",
-        "search": "ano thing",
+        "search": {"file": "ano thing"},
         "directory": {"$oid": "ddff19b92e21e1560a7dd000"},
         "parent_directories": [
               {"$oid": "ddff19b92e21e1560a7dd000"},
